--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -11,11 +11,16 @@ jobs:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
-    # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-workflow#configuring-a-build-matrix
+    # See: https://docs.github.com/en/actions/configuring-and-managing-workflows/configuring-a-build-matrix
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
+
+    - name: Install Dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y libpng-dev
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
