--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -22,7 +22,12 @@ jobs:
       with:
           vcpkgArguments: getopt:x64-windows libiconv:x64-windows libpng:x64-windows
           vcpkgDirectory: '${{ github.workspace }}/vcpkg'
-          vcpkgGitCommitId: 'fca18ba3572f8aebe3b8158c359db62a7e26134e'
+          #vcpkgGitCommitId: 'fca18ba3572f8aebe3b8158c359db62a7e26134e'
+
+        # --- Step 3: Verify vcpkg installation ---
+    - name: Verify vcpkg installation
+      run: vcpkg list
+      working-directory: "${RUNNER_WORKSPACE}/vcpkg"
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
