--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -49,3 +49,14 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: ctest -C $BUILD_TYPE
+
+    - name: Package Build Directory
+      working-directory: ${{runner.workspace}}
+      shell: bash
+      run: |
+        zip -r build_package.zip build
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v3
+      with:
+        name: build_package
+        path: build_package.zip
