--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -27,7 +27,7 @@ jobs:
         # --- Step 3: Verify vcpkg installation ---
     - name: Verify vcpkg installation
       run: vcpkg list
-      working-directory: "${RUNNER_WORKSPACE}/vcpkg"
+      working-directory: '${{ github.workspace }}/vcpkg'
 
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
