--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.1.0)
 
 project(QRencode VERSION 4.1.1 LANGUAGES C)
 
-option(WITH_TOOLS "Build utility tools"  YES )
+option(WITH_TOOLS "Build utility tools"  NO )
 option(WITH_TESTS "Build tests"  NO )
 option(WITHOUT_PNG "Disable PNG support" NO)
 option(GPROF "Generate extra code to write profile information" OFF)
@@ -188,7 +188,7 @@ message(STATUS " .. C++ compiler ................ = ${CMAKE_CXX_COMPILER}"    )
 message(STATUS " .. C compiler .................. = ${CMAKE_C_COMPILER}"      )
 message(STATUS " .. size(void*) ................. = ${CMAKE_SIZEOF_VOID_P}"   )
 message(STATUS " Dependencies:"                                               )
-#message(STATUS " .. Doxygen ..................... = ${DOXYGEN_EXECUTABLE}"    )
+#message(STATUS " .. Doxygen ..................... = ${DOXYGEN_EXECUTARY}"    )
 message(STATUS " .. Thread library of the system  = ${CMAKE_THREAD_LIBS_INIT}")
 message(STATUS " .. Iconv ....................... = ${ICONV_FOUND}"           )
 message(STATUS " .... Iconv includes ............ = ${ICONV_INCLUDE_DIR}"     )
