--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -1,4 +1,5 @@
-name: CMake
+name: CMake  win10
+
 
 on: [push, pull_request]
 
@@ -24,11 +25,6 @@ jobs:
           vcpkgDirectory: '${{ github.workspace }}/vcpkg'
           vcpkgGitCommitId: 'ce613c41372b23b1f51333815feb3edd87ef8a8b'
 
-        # --- Step 3: Verify vcpkg installation ---
-    - name: Verify vcpkg installation
-      run: vcpkg list
-      working-directory: '${{ github.workspace }}/vcpkg'
-
     - name: Create Build Environment
       # Some projects don't allow in-source building, so create a separate build directory
       # We'll use this as our working directory for all subsequent commands
@@ -49,10 +45,3 @@ jobs:
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build . --config $BUILD_TYPE
-
-    - name: Test
-      working-directory: ${{runner.workspace}}/build
-      shell: bash
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-      run: ctest -C $BUILD_TYPE
