--- a/.github/workflows/cmake-windows.yml
+++ b/.github/workflows/cmake-windows.yml
@@ -45,3 +45,16 @@ jobs:
       shell: bash
       # Execute the build.  You can specify a specific target with "--target <NAME>"
       run: cmake --build . --config $BUILD_TYPE
+
+    - name: Package
+      working-directory: ${{ runner.workspace }}/build
+      shell: bash
+      # Example: Create a zip package of the build artifacts
+      run: |
+        zip -r build-artifacts.zip .
+        # Optionally, you can upload the artifact to GitHub Actions
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+          name: build-artifacts
+          path: ${{ runner.workspace }}/build/build-artifacts.zip
